<resources>
    <string name="app_name">sleep-app</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_information">Information</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_questionnaire">Questionnaire</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="morning_questionnaire">Morning Questionnaire</string>
    <string name="Not_at_all">Not at all</string>
    <string name="just_a_little">Just a little</string>
    <string name="somehow">Somehow</string>
    <string name="quite">Quite</string>
    <string name="much">Much</string>
    <string name="save">Save</string>
    <string name="feeling_when">Feeling when...</string>
    <string name="going_to_bed">going to bed</string>
    <string name="waking_up">waking up</string>
    <string name="cognitive_test">Cognitive Test</string>
    <string name="_3_min">3 min</string>
    <string name="did_you_feel_stressed_when_going_to_bed_yesterday">How stressed did you feel when you went to bed last night?</string>
    <string name="Memory_description1">In this test, you will see nine symbols displayed. Your task is to memorize the location of the symbols.</string>
    <string name="Memory_description2">In this test, you will see nine symbols displayed. Your task is to memorize the location of the symbols.  Start the test by touching the start button</string>

    <string name="App_info">This app is used in order to get user input from the participants in the research study performed "Sömn i vardagen" performed by Stockholm University.</string>
    <string name="test_info">The app consists of a number of cognitive tests to be performed in the morning and before bedtime. These tests can be found on the home screen as well as notifications</string>
    <string name="information">Information</string>
    <string name="welcome_to_the_sleep_app">Welcome to the sleep app</string>
    <string name="questionnaireDescription">In this questionnaire you will be asked 3 questions about your sleep</string>
    <string name="_3_questions">3 questions</string>
    <string name="_5_min">5 min</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="memory">Memory</string>
    <string name="email">Email:</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>