<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#405657"
    tools:context=".ui.notifications.NotificationsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="370dp"
        android:layout_height="600dp"
        android:layout_marginTop="20dp"
        android:animateLayoutChanges="true"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="25dp"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/cardLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="111dp"
                android:layout_marginBottom="529dp"
                android:fontFamily="@font/oswald"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/purple_700"
                android:textSize="36sp"
                android:textStyle="bold"
                android:text="@string/information" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="335dp"
                android:fontFamily="@font/oswald"
                android:gravity="center"
                android:lineSpacingExtra="8sp"
                android:text="@string/App_info"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="216dp"
                android:fontFamily="@font/oswald"
                android:lineSpacingExtra="8sp"
                android:text="@string/test_info"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="102dp"
                android:layout_marginBottom="490dp"
                android:fontFamily="@font/oswald"
                android:gravity="center"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/welcome_to_the_sleep_app" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>