<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="#405657"
    tools:context=".ui.home.StartTest">

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="370dp"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:animateLayoutChanges="true"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="25dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/cardLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/CognitiveTestLabel1"
                android:layout_width="191dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/oswald"
                android:text="@string/cognitive_test"
                android:textColor="#040404"
                android:textSize="33sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/timeLabel1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="19dp"
                android:background="@drawable/rounded_corner"
                android:fontFamily="@font/oswald"
                android:gravity="center"
                android:text="@string/_3_min"
                android:textColor="#000000"
                android:textSize="19sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/testTypeLabel1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="26dp"
                android:layout_marginTop="52dp"
                android:fontFamily="@font/oswald"
                android:text="@string/memory"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/testDescriptionLabel1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="134dp"
                android:fontFamily="@font/oswald"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/Memory_description2"
                android:textSize="17sp" />

            <Button
                android:id="@+id/testStartButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="140dp"
                android:layout_marginBottom="43dp"
                android:text="Start" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
